WIP simplify the todo plugin
